# DPCpp_labs

./: .gitignore  CMakeLists.txt  init  lab1.cpp
lab2/: lab2.cpp
lab3/: lab3.cpp
